feat: fontawesome放弃按需引用，修改为link导入，以便图标可动态配置

--- a/src/components/panel/index.scss
+++ b/src/components/panel/index.scss
@@ -6,7 +6,7 @@
     display: flex;
     border-bottom: solid 1px #ddd;
     .m-panel-title {
-      svg {
+      i {
         margin-right: 4px;
       }
       font-size: 16px;
