--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -15,8 +15,8 @@
     display: block;
     padding: 8px 16px;
     border: 1px solid transparent;
-    svg {
-      margin-right: 8px;
+    i {
+      margin-right: 4px;
     }
     &:hover {
       border-bottom: solid 1px #000;
