--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
     monospace;
 }
 
-ul {
+/* ul {
   margin: 0;
   padding: 0;
   li {
@@ -36,4 +36,4 @@ a {
 
 h2 {
   margin: 0 0 32px 0;
-}
+} */
